--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -146,10 +146,10 @@ jobs:
           # Whether this connection use TLS (default is true if server_port is 465)
           secure: true
           # Body of mail message (might be a filename prefixed with file:// to read from)
-          body: |
-            Build job for ${{ github.repository }} has completed. \
-            Result status for TESTS-${{ steps.job_conclusion.outputs.test_conclusion }}, \
-            for BUILD JOB-${{ steps.job_conclusion.outputs.build_conclusion }}. \
+          body:
+            Build job for ${{ github.repository }} has completed.
+            Result status for TESTS-${{ steps.job_conclusion.outputs.test_conclusion }},
+            for BUILD JOB-${{ steps.job_conclusion.outputs.build_conclusion }}.
             Workflow execution time ${{ steps.calculate_duration.outputs.elapsed }} sec.
           # Allow unsigned/invalid certificates
           ignore_cert: true
