--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,9 +3,9 @@ name: myCI
 on:
   #workflow_dispatch: #manual start from Github UI or API
   push:
-    branches: dev
+    branches: master
   pull_request:
-    branches: dev
+    branches: master
 
 jobs:
   test:
@@ -108,7 +108,7 @@ jobs:
             echo "::set-output name=user_email::${{ github.event.pusher.email }}"
           fi
 
-      - name: get job conclusion
+      - name: get job result
         id: job_conclusion
         run: |
           echo "::set-output name=test_conclusion::$(curl -H "Accept: application/vnd.github+json" \
@@ -125,7 +125,7 @@ jobs:
           echo "::set-output name=elapsed::$ELPSD"
 
       #---Email notifications with elapsed time---
-      - name: Send email notifications for this job
+      - name: send email
         if: ${{ always() }} #run this step even if previous steps have failed
         uses: dawidd6/action-send-mail@6d23605227c578d570e5594931720f85a1af55a2
         with:
