--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,9 +3,9 @@ name: myCI
 on:
   #workflow_dispatch: #manual start from Github UI or API
   push:
-    branches: master
+    branches: dev
   pull_request:
-    branches: master
+    branches: dev
 
 jobs:
   test:
@@ -98,6 +98,11 @@ jobs:
     runs-on: ubuntu-20.04
     if: ${{ always() }}
     needs: [build, test]
+    
+    strategy:
+      matrix:
+        job-index: [0, 1]
+
     steps:
       - name: get email
         id: email
@@ -111,12 +116,9 @@ jobs:
       - name: get job result
         id: job_conclusion
         run: |
-          echo "::set-output name=test_conclusion::$(curl -H "Accept: application/vnd.github+json" \
+          echo "::set-output name=job_${{ matrix.job-index }}_conclusion::$(curl -H "Accept: application/vnd.github+json" \
           https://api.github.com/repos/${{ github.repository }}/actions/runs/${{ github.run_id }}/jobs \
-          | jq '.jobs[0].conclusion')"
-          echo "::set-output name=build_conclusion::$(curl -H "Accept: application/vnd.github+json" \
-          https://api.github.com/repos/${{ github.repository }}/actions/runs/${{ github.run_id }}/jobs \
-          | jq '.jobs[1].conclusion')"
+          | jq '.jobs[${{ matrix.job-index }}].conclusion')"
 
       - id: calculate_duration
         run: |
@@ -148,8 +150,8 @@ jobs:
           # Body of mail message (might be a filename prefixed with file:// to read from)
           body: |
             Build job for ${{ github.repository }} has completed.
-            Result status for TESTS-${{ steps.job_conclusion.outputs.test_conclusion }},
-            for BUILD JOB-${{ steps.job_conclusion.outputs.build_conclusion }}.
+            Result status for TESTS-${{ steps.job_conclusion.outputs.job_0_conclusion }},
+            for BUILD JOB-${{ steps.job_conclusion.outputs.job_1_conclusion }}.
             Workflow execution time ${{ steps.calculate_duration.outputs.elapsed }} sec.
           # Allow unsigned/invalid certificates
           ignore_cert: true
