--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -99,10 +99,6 @@ jobs:
     if: ${{ always() }}
     needs: [build, test]
     
-    strategy:
-      matrix:
-        job-index: [0, 1]
-
     steps:
       - name: get email
         id: email
@@ -116,8 +112,7 @@ jobs:
       - name: get job result
         id: job_conclusion
         run: |
-          for i in 0 1
-          do
+          for i in 0 1; do
             echo "::set-output name=job_$i_conclusion::$(curl -H "Accept: application/vnd.github+json" \
             https://api.github.com/repos/${{ github.repository }}/actions/runs/${{ github.run_id }}/jobs \
             | jq '.jobs[$i].conclusion')"
