--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -112,10 +112,12 @@ jobs:
       - name: get job result
         id: job_conclusion
         run: |
-          for i in 0 1; do
-            echo "::set-output name=job_$i_conclusion::$(curl -H "Accept: application/vnd.github+json" \
-            https://api.github.com/repos/${{ github.repository }}/actions/runs/${{ github.run_id }}/jobs \
-            | jq '.jobs[$i].conclusion')"
+          for i in {0..1}
+          do
+          echo "i: $i"
+          echo "::set-output name=job_$i_conclusion::$(curl -H "Accept: application/vnd.github+json" https://api.github.com/repos/${{ github.repository }}/actions/runs/${{ github.run_id }}/jobs | jq '.jobs[$i].conclusion')"
+          echo ${{ job_$i_conclusion }}
+          echo ${{ job_0_conclusion }}
           done
 
       - id: calculate_duration
