--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -109,15 +109,12 @@ jobs:
             echo "::set-output name=user_email::${{ github.event.pusher.email }}"
           fi
 
-      - name: get job result
+      - name: get job result #echo ${{ job_$i_conclusion }} echo ${{ job_0_conclusion }} echo "i: $i"
         id: job_conclusion
         run: |
           for i in {0..1}
           do
-          echo "i: $i"
-          echo "::set-output name=job_$i_conclusion::$(curl -H "Accept: application/vnd.github+json" https://api.github.com/repos/${{ github.repository }}/actions/runs/${{ github.run_id }}/jobs | jq '.jobs[$i].conclusion')"
-          echo ${{ job_$i_conclusion }}
-          echo ${{ job_0_conclusion }}
+          echo "::set-output name=job_${i}_conclusion::$(curl -H "Accept: application/vnd.github+json" https://api.github.com/repos/${{ github.repository }}/actions/runs/${{ github.run_id }}/jobs | jq '.jobs[${i}].conclusion')"
           done
 
       - id: calculate_duration
