--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -114,7 +114,11 @@ jobs:
         run: |
           for i in {0..1}
           do
-          echo "::set-output name=job_${{i}}_conclusion::$(curl -H "Accept: application/vnd.github+json" https://api.github.com/repos/${{ github.repository }}/actions/runs/${{ github.run_id }}/jobs | jq '.jobs[0].conclusion')"
+          combined=job_${i}_conclusion
+          echo $combined
+          echo ${combined}
+          echo ${!combined}
+          echo "::set-output name=${combined}::$(curl -H "Accept: application/vnd.github+json" https://api.github.com/repos/${{ github.repository }}/actions/runs/${{ github.run_id }}/jobs | jq '.jobs[0].conclusion')"
           done
 
       - id: calculate_duration
