--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -116,9 +116,9 @@ jobs:
           do
           jobi=job_${i}_conclusion
           echo "1--$jobi"
-          echo "2--${jobi}""
-          echo "3--${!jobi}""
-          echo "::set-output name=${jobi}::$(curl -H "Accept: application/vnd.github+json" https://api.github.com/repos/${{ github.repository }}/actions/runs/${{ github.run_id }}/jobs | jq '.jobs[$i].conclusion')"
+          echo "2--${jobi}"
+          echo "3--${!jobi}"
+          echo "::set-output name=${jobi}::$(curl -H "Accept: application/vnd.github+json" https://api.github.com/repos/${{ github.repository }}/actions/runs/${{ github.run_id }}/jobs | jq '.jobs[${i}].conclusion')"
           done
 
       - id: calculate_duration
