--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -109,16 +109,13 @@ jobs:
             echo "::set-output name=user_email::${{ github.event.pusher.email }}"
           fi
 
-      - name: get job result #echo ${{ job_$i_conclusion }} echo ${{ job_0_conclusion }} echo "i: $i"
+      - name: get job result
         id: job_conclusion
         run: |
           for i in {0..1}
           do
           jobi=job_${i}_conclusion
-          echo "1--$jobi"
-          echo "2--${jobi}"
-          echo "3--${!jobi}"
-          echo "::set-output name=${jobi}::$(curl -H "Accept: application/vnd.github+json" https://api.github.com/repos/${{ github.repository }}/actions/runs/${{ github.run_id }}/jobs | jq '.jobs[${i}].conclusion')"
+          echo "::set-output name=${jobi}::$(curl -H "Accept: application/vnd.github+json" https://api.github.com/repos/${{ github.repository }}/actions/runs/${{ github.run_id }}/jobs | jq --arg i "$i" '.jobs[$i].conclusion')"
           done
 
       - id: calculate_duration
